--- a/Fakeflix/package.json
+++ b/Fakeflix/package.json
@@ -30,10 +30,11 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "react-scripts test",
+		"test": "nyc mocha 'src/tests/whitebox_testing/*.test.js'",
 		"eject": "react-scripts eject",
 		"lint": "eslint .",
-		"format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md|vue)\""
+		"format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md|vue)\"",
+		"coverage": "react-scripts test --env=jsdom --watchAll=false --coverage"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -55,13 +56,18 @@
 	},
 	"devDependencies": {
 		"babel-eslint": "^10.1.0",
+		"chai": "^4.3.4",
+		"enzyme": "^3.11.0",
 		"eslint": "^7.20.0",
 		"eslint-config-prettier": "^8.0.0",
 		"eslint-plugin-prettier": "^3.3.1",
 		"eslint-plugin-react": "^7.22.0",
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"husky": "^4.3.8",
+		"jsdom": "^16.7.0",
 		"lint-staged": "^10.5.4",
+		"mocha": "^9.1.3",
+		"nyc": "^15.1.0",
 		"prettier": "^2.2.1",
 		"redux-devtools-extension": "^2.13.9"
 	},
