--- a/Fakeflix/package.json
+++ b/Fakeflix/package.json
@@ -11,8 +11,8 @@
 		"firebase-tools": "^9.5.0",
 		"framer-motion": "^4.1.16",
 		"node-sass": "^5.0.0",
-		"react": "^17.0.1",
-		"react-dom": "^17.0.1",
+		"react": "^16.14.0",
+		"react-dom": "^16.14.0",
 		"react-hook-form": "^6.15.4",
 		"react-icons": "^4.2.0",
 		"react-redux": "^7.2.2",
@@ -30,11 +30,15 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "nyc mocha 'src/tests/whitebox_testing/*.test.js'",
+		"test": "nyc mocha --require ignore-styles --require 'node_modules/@babel/register' 'src/tests/whitebox_testing/*.spec.js'",
 		"eject": "react-scripts eject",
 		"lint": "eslint .",
 		"format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md|vue)\"",
-		"coverage": "react-scripts test --env=jsdom --watchAll=false --coverage"
+		"coverage": "nyc --reporter=lcov --reporter=text npm run test"
+	},
+	"nyc": {
+		"include": "src/components",
+		"exclude": "src/tests"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -55,21 +59,30 @@
 		]
 	},
 	"devDependencies": {
+		"@babel/core": "^7.12.3",
+		"@babel/preset-env": "^7.16.4",
+		"@babel/preset-react": "^7.16.0",
+		"@babel/register": "^7.16.0",
+		"babel": "^6.23.0",
 		"babel-eslint": "^10.1.0",
 		"chai": "^4.3.4",
 		"enzyme": "^3.11.0",
+		"enzyme-adapter-react-16": "^1.15.6",
 		"eslint": "^7.20.0",
 		"eslint-config-prettier": "^8.0.0",
 		"eslint-plugin-prettier": "^3.3.1",
 		"eslint-plugin-react": "^7.22.0",
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"husky": "^4.3.8",
+		"ignore-styles": "^5.0.1",
 		"jsdom": "^16.7.0",
 		"lint-staged": "^10.5.4",
 		"mocha": "^9.1.3",
 		"nyc": "^15.1.0",
 		"prettier": "^2.2.1",
-		"redux-devtools-extension": "^2.13.9"
+		"react-test-renderer": "^16.14.0",
+		"redux-devtools-extension": "^2.13.9",
+		"sinon": "^12.0.1"
 	},
 	"husky": {
 		"hooks": {
