--- a/Fakeflix/package.json
+++ b/Fakeflix/package.json
@@ -20,6 +20,7 @@
 		"react-scripts": "4.0.3",
 		"redux": "^4.0.5",
 		"redux-logger": "^3.0.6",
+		"redux-mock-store": "^1.5.4",
 		"redux-persist": "^6.0.0",
 		"redux-saga": "^1.1.3",
 		"redux-thunk": "^2.3.0",
@@ -76,6 +77,7 @@
 		"husky": "^4.3.8",
 		"ignore-styles": "^5.0.1",
 		"jsdom": "^16.7.0",
+		"jsdom-global": "^3.0.2",
 		"lint-staged": "^10.5.4",
 		"mocha": "^9.1.3",
 		"nyc": "^15.1.0",
